--- a/layouts/partials/reveal-hugo/end.html
+++ b/layouts/partials/reveal-hugo/end.html
@@ -9,5 +9,5 @@
 </style>
 
 <footer class="footer">
-    PyData Global 2021 Mentored Sprint - 2021/10/29 ○ pytorch-ignite.ai
+    PyData Riyadh 2022 Mentored Sprint - 2022/01/14 ○ pytorch-ignite.ai
 </footer>
